WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101246
[BlackBerry] Do not display error page for failed downloads
https://bugs.webkit.org/show_bug.cgi?id=101246
Summary
[BlackBerry] Do not display error page for failed downloads
Lyon Chen
Reported
2012-11-05 12:35:02 PST
When a download failed or denied, its failure is shown in DownloadManager, and it should not lead to an error page.
Attachments
patch for 101246
(11.43 KB, patch)
2012-11-05 12:51 PST
,
Lyon Chen
no flags
Details
Formatted Diff
Diff
Upload the correct patch
(4.97 KB, patch)
2012-11-05 13:26 PST
,
Lyon Chen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lyon Chen
Comment 1
2012-11-05 12:36:21 PST
+Yong, Rob, Joe, Leo.
Lyon Chen
Comment 2
2012-11-05 12:51:02 PST
Created
attachment 172383
[details]
patch for 101246
Lyon Chen
Comment 3
2012-11-05 13:26:36 PST
Created
attachment 172389
[details]
Upload the correct patch
Rob Buis
Comment 4
2012-11-05 13:46:56 PST
Comment on
attachment 172389
[details]
Upload the correct patch LGTM
WebKit Review Bot
Comment 5
2012-11-05 14:00:10 PST
Comment on
attachment 172389
[details]
Upload the correct patch Clearing flags on attachment: 172389 Committed
r133522
: <
http://trac.webkit.org/changeset/133522
>
WebKit Review Bot
Comment 6
2012-11-05 14:00:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug