[BlackBerry] Do not display error page for failed downloads https://bugs.webkit.org/show_bug.cgi?id=101246

Internal PR: 236318
Internal reviewed by Joe Mason, Leo Yang.
Patch by Lianghui Chen <liachen@rim.com> on 2012-11-05
Reviewed by Rob Buis.

Right now when a main load, including all downloads, failed, it will
display an error page. This is not very user friendly, especially for
WebWorks application, which want to use its own user interface to info
user about the failure.
So we just stop displaying error page for downloads.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDidFailProvisionalLoad):

Canonical link: https://commits.webkit.org/119340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133522 268f45cc-cd09-0410-ab3c-d52691b4dbfc